--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,32 +1,34 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-  <div class="carousel-indicators">
-    <% count = 1 %>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"  class="active" aria-current="true" aria-label="Slide 1"></button>
-    <% while count < @place.photos.length  %> <%  %>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="<%=count%>" aria-label="Slide <%=count+1%>"></button>
-      <% count +=1 %>
-    <% end %>
-  </div>
-  <div class="carousel-inner">
+<div class= "container">
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+    <div class="carousel-indicators">
+      <% count = 1 %>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"  class="active" aria-current="true" aria-label="Slide 1"></button>
+      <% while count < @place.photos.length  %> <%  %>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="<%=count%>" aria-label="Slide <%=count+1%>"></button>
+        <% count +=1 %>
+      <% end %>
+    </div>
+    <div class="carousel-inner">
 
-  <div class="carousel-item active">
-    <%= cl_image_tag @place.photos.first.key, height: 300, width: 400, class: "picture-carousel d-sm-block w-100" %>
-  </div>
+    <div class="carousel-item active">
+      <%= cl_image_tag @place.photos.first.key, height: 300, width: 400, class: "picture-carousel d-sm-block w-100" %>
+    </div>
 
-    <% @place.photos[1..].each do |photo| %>
-      <div class="carousel-item">
-        <%= cl_image_tag photo.key, height: 300, width: 400, class: "picture-carousel d-sm-block w-100" %>
-      </div>
-    <% end %>
+      <% @place.photos[1..].each do |photo| %>
+        <div class="carousel-item">
+          <%= cl_image_tag photo.key, height: 300, width: 400, class: "picture-carousel d-sm-block w-100" %>
+        </div>
+      <% end %>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
 </div>
 
 <div class= "container mb-3 mt-3 d-flex justify-content-between">
